<resources>
    <string name="app_name">CampusRadio</string>
    <string name="logo_name">途聆</string>
    <string name="logo_explain"> 你想听的，这里都有</string>
    <string name="user_name">用户名：</string>
    <string name="user_password">密码：</string>
    <string name="loging">登录</string>
    <string name="new_user">新用户</string>
    <string name="forget_password">忘记密码</string>

    <string name="index">首页</string>
    <string name="category">分类</string>
    <string name="collection">收藏</string>
    <string name="person">我的</string>

    <string name="channel_separation">频道分类</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_account">我的账号</string>


    <string name="action_exit">Exit Program</string>
    <string name="start_bluetooth">Bluetooth</string>
    <string name="ble_ptt">BLE PTT</string>
    <string name="change_passwd">Change Pass</string>
    <string name="change_nick">Change alias</string>
    <string name="set_ptt_type">PTT trigger</string>
    <string name="set_ble_ptt">BLE PTT</string>
    <string name="set_audio">Audio attributes</string>
    <string name="show_version">APP infomation</string>
    <string name="bind_phone">bind PhoneNo</string>

    <string name="show_speaker_level">Speaker Volume</string>
    <string name="notify_sound_select">notify sound type:&#160;</string>
    <string name="normal_notify">Normal</string>
    <string name="simple_notify">Simple</string>
    <string name="none_notify">Mute</string>

    <string name="register">NEW</string>
    <string name="login">GO</string>
    <string name="confirm">OK</string>
    <string name="init_channel">Initializing Channels</string>
    <string name="init_channel_end">Get total:&#160;</string>
    <string name="begin_dialogsession">To these:&#160;</string>
    <string name="end_smssession">issue short message</string>
    <string name="end_dialogsession">issue one-way talking.</string>
    <string name="user_nick">ALIAS:&#160;</string>
    <string name="account">Tourlink NO:&#160;</string>
    <string name="invite">code:&#160;</string>
    <string name="password">PASSWORD:&#160;</string>
    <string name="password_new">New Pass:&#160;</string>
    <string name="pass_confirm">Confirm:&#160;</string>
    <string name="nick_now">old alias:&#160;</string>
    <string name="nick_new">new alias:&#160;</string>
    <string name="phone_no">PhoneNo:&#160;</string>
    <string name="auth_code">Auth-Code:&#160;</string>


    <string name="channel_name_fragment">Channel Name:&#160;</string>
    <string name="new_channel_name">New Channel Name:&#160;</string>
    <string name="entry_code_yes">[use pass]</string>
    <string name="entry_code_no">[no pass]</string>
    <string name="focus_ec_hint">PASSWD</string>
    <string name="modi_channel_name">Change Channel Name:</string>

    <string name="tourling">TourLink</string>
    <string name="jzone">JZone Tech WuXi</string>
    <string name="ok">OK</string>
    <string name="visitor_intro">You are TourLink Guest</string>
    <string name="visitor_nick">Use alias:&#160;</string>
    <string name="user_entry">USER</string>
    <string name="reset_pw">FORGET-PASS</string>

    <string name="entry_channel">ENTER</string>
    <string name="sending_sms">Issue SMS</string>
    <string name="dialog">one-way talk</string>
    <string name="dengdeng">&#160;... &#160;</string>
    <string name="ren">&#160;man</string>
    <string name="gong">&#160;total&#160;</string>
    <string name="select_bluetooth">select bluetooth</string>
    <string name="pair_hint">turn on and pair bluetooth</string>
    <string name="connect_bluetooth_failed1">link to&#160;</string>
    <string name="connect_bluetooth_failed2">&#160;failed</string>
    <string name="update_hint">There is a new version for download</string>

    <string name="spk_volume_hint">Speaker Volume</string>
    <string name="as_system_vol">System</string>
    <string name="that_is">&#160;:&#160;</string>

    <string name="tl_sms_hint">Tourlink Summon</string>
    <string name="tl_sms_hint1">There are&#160;</string>
    <string name="tl_sms_hint2">&#160;Summon</string>
    <string name="comes_from">From&#160;</string>
    <string name="tl_new_sms">New TL-Summon</string>

    <string name="channel_create">New Channel</string>
    <string name="channel_search">Search/select</string>
    <string name="channel_delete">Un-select Channel</string>
    <string name="channel_modify">Channel Name</string>
    <string name="channel_default">Default Channel</string>

    <string name="binderr_auth_code">Error Auth-code</string>
    <string name="binderr_bound_exist">Error Bound existed</string>
    <string name="binderr_inner">Error sever inner err</string>
    <string name="binderr_no_phone">Error no phoneNo</string>
    <string name="binderr_no_account">Error Account</string>
    <string name="binderr_phoneNo">Error PhoneNo</string>
    <string name="binderr_phone_used">Error PhoneNo used</string>
    <string name="binderr_sms_server">Error sms server</string>
    <string name="binderr_phone_unava">Error invaid phone</string>
    <string name="binderr_network">Error Network</string>
    <string name="binderr_unknown">Error ----</string>

    <string name="binding_phone">Phone NO:&#160;</string>
    <string name="input_auth_code">Auth Code:&#160;</string>
    <string name="input_format_error">Error Format.</string>
    <string name="member_select_hint">Select limited</string>
    <string name="member_sms">Add Summon</string>
    <string name="member_dialog">Add Call</string>
    <string name="offline_hint">OFFLINE</string>
    <string name="exit_ui_hint">exit UI, try again</string>
    <string name="ch_create_seg">Create</string>
    <string name="de_channel_seg">channel</string>
    <string name="no_channel_hint">Not found</string>
    <string name="success_hint">Success</string>
    <string name="fail_hint">Failed</string>
    <string name="sms_seg">summon&#160;</string>
    <string name="deliver_seg">&#160;deliverd</string>
    <string name="change_pass_success">password changed.</string>
    <string name="operate_failed">OP failed.</string>
    <string name="rename_success">changed.</string>
    <string name="rename_failed">not changed:&#160;</string>
    <string name="create_success">created.</string>
    <string name="create_failed">not created:&#160;</string>
    <string name="delete_success">deleted.</string>
    <string name="delete_failed">not deleted::&#160;</string>
    <string name="focuse_success">added.</string>
    <string name="focuse_failed">not added::&#160;</string>
    <string name="unfocuse_success">removed.</string>
    <string name="unfocuse_failed">not removed:&#160;</string>
    <string name="default_ch_set">default channel is:&#160;</string>
    <string name="no_entry_channel">No Entry</string>
    <string name="getting_pub_channel">Get Public Ch.</string>
    <string name="getting_channels">Get channel list</string>
    <string name="tourling_ch_hint">TOURLINK CH</string>
    <string name="tourling_ch_seg">TOURLINK&#160;</string>
    <string name="ch_hint_seg">&#160;CH</string>
    <string name="cherr_toomuch">Number Limited</string>
    <string name="change_nick_succ">New alias is:&#160;</string>
    <string name="change_nick_fail">set alias failed.</string>
    <string name="bind_phone_failed">Error binding, reason:&#160;</string>
    <string name="bind_phone_hint1">Bind NO:&#160;</string>
    <string name="bind_phone_hint2">&#160;Success.</string>
    <string name="failed_reason">ERROR.reason:&#160;</string>
    <string name="reset_pass_success">pass reseted.</string>
    <string name="sending_auth_hint1">Auth code send to&#160;</string>
    <string name="sending_auth_hint2">&#160;phone.</string>

    <string name="cherr_psss">Err pass</string>
    <string name="cherr_unknown">Unknown</string>
    <string name="need_account">need account</string>
    <string name="error_phoneno">Err phoneNo</string>
    <string name="need_passwd">need pass</string>
    <string name="input_phoneno">need phoneNo</string>
    <string name="phoneno_hint">PhoneNo:&#160;</string>
    <string name="user_hint">Account</string>
    <string name="auth_code_error">Err auth-code</string>
    <string name="unidentiry_pass">Err input</string>
    <string name="no_session">Err session</string>
    <string name="no_history">No history records</string>
    <string name="today">Today&#160;</string>
    <string name="back_exit_ui_hint">twice to exit UI</string>
    <string name="sms_check">send sms</string>

    <string name="err_timeout">Err timeout</string>
    <string name="err_account">Err account</string>
    <string name="err_userpass">Err password</string>
    <string name="err_serverunava">Err service</string>
    <string name="err_network">Err network</string>
    <string name="err_nouser">Err account</string>
    <string name="register_failed">Register failed</string>
    <string name="callmeeting_head">CallMeeting by&#160;</string>

    <string name="visitor_welcome">You are tourlink guest</string>
    <string name="visitor_nick_err">,&#160;too short&#160;</string>
    <string name="luren">GUEST</string>
    <string name="tg1">-A</string>
    <string name="tg2">-C</string>
    <string name="tg3">-E</string>
    <string name="tg4">-F</string>
    <string name="tg5">-H</string>
    <string name="tg6">-K</string>
    <string name="tg7">-P</string>
    <string name="tg8">-Q</string>
    <string name="tg9">-R</string>
    <string name="tg0">-T</string>

    <string name="text_shift_hint"> &lt;&#160;&lt;&#160;&lt;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&gt;&#160;&gt;&#160;&gt;&#160;</string>
    <string name="guanwang">www.tourling.cn</string>

</resources>
