<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="60dp">
    <LinearLayout
        android:id="@+id/activity_main_bottom_bar_linearLayout_index"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/index_pressed"
            android:clickable="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index"
            android:textColor="@color/font_color"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_bottom_bar_linearLayout_category"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/category_pressed"
            android:clickable="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/font_color"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_bottom_bar_linearLayout_collection"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/collection_pressed"
            android:clickable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            android:textColor="@color/font_color"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_bottom_bar_linearLayout_person"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/person_pressed"
            android:clickable="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person"
            android:textColor="@color/font_color"
            android:clickable="false"/>
    </LinearLayout>
</LinearLayout>