<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.hdu.kefan.campusradio.activity.LoginActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/login_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/imageView3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linearLayout2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="校园广播"
                android:textSize="28sp"
                android:textColor="@color/main_color"/>
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="途聆 你想听的，这里都有"
            android:textSize="20sp"
            android:textColor="@color/main_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/login_action_background"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/linearLayout5"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textColor="@color/font_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/activity_login_editText_username"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/base_white"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#5a5a5a" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/user_password"
                    android:textColor="@color/font_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/activity_login_editText_userpassword"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/base_white"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#5a5a5a" />
        </LinearLayout>


        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:id="@+id/activity_login_textView_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_action_button"
            android:gravity="center"
            android:text="@string/loging"
            android:textColor="@color/base_white"
            android:textSize="20sp"/>


        <LinearLayout

            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/activity_login_textView_newuser"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="@string/new_user"
                android:textColor="@color/font_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_login_textView_forgetpassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/forget_password"
                android:textColor="@color/font_color"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
